# bato-downloader

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DISCLAIMER.md  IMPROVEMENTS.md  LICENSE  ONBOARDING.md  PLUGINS.md  PLUGIN_REPOSITORY_STRUCTURE.md  PYINSTALLER_GUIDE.md  README.md  README_zh-TW.md  RELEASE_NOTES_1.3.2.md  REMOTE_PLUGIN_ROADMAP.md  SECURITY.md  UniversalMangaDownloader.spec  WIKI_BASED_PLUGIN_REPOSITORY.md  bootstrap.py  config.py  coverage.xml  manga  manga.bat  manga_downloader.py  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  settings.json  setup.sh  umd_cli.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-please.yml  release.yml
.gitlab/issue_templates/: Bug.md  Feature_Request.md
.gitlab/merge_request_templates/: Default.md
community-plugins/: README.md  index.json
community-plugins/converters/: README.md  cbr_converter.py
community-plugins/parsers/: README.md
core/: __init__.py  download_task.py  pdf_converter.py  queue_manager.py
docs/: RELEASE_PROCESS.md  REMOTE_PLUGINS.md
locales/: de.json  en.json  ja.json  zh_CN.json
parsers/: __init__.py  base_parser.py  bato_v1_parser.py  bato_v2_parser.py  bato_v3_parser.py  comick_parser.py  mangadex_parser.py
plugin_repository/official/: README.md  index.json
plugin_repository/official/converters/: example_epub_converter.py  remote_epub_converter.py
plugins/: __init__.py  base.py  bato_parser.py  cbz_converter.py  dependency_manager.py  mangadex_parser.py  metadata_parser.py  pdf_converter.py  remote_manager.py  repository_manager.py  version_manager.py
scripts/: validate_community_plugin.py
services/: __init__.py  bato_service.py  mangadex_service.py
tests/: __init__.py  test_edge_cases.py  test_integration.py  test_ui_components.py
tests/performance/: test_mangadex_service_performance.py  test_queue_manager_performance.py
tests/test_cli/: test_auto_update.py  test_remote_plugins_cli.py
tests/test_core/: test_pdf_converter.py  test_queue_manager.py
tests/test_parsers/: test_base_parser.py
tests/test_plugins/: __init__.py  test_base.py  test_bato_parser.py  test_converters.py  test_dependency_manager.py  test_mangadex_parser.py  test_remote_manager.py  test_repository_manager.py
tests/test_services/: test_bato_service.py  test_mangadex_service.py
tests/test_utils/: test_http_client.py
ui/: __init__.py  app.py  logging_utils.py  models.py  widgets.py
ui/tabs/: __init__.py  browser_tab.py  downloads_tab.py  settings_tab.py
utils/: __init__.py  file_utils.py  http_client.py  i18n.py  rate_limit.py  settings.py  validation.py
(+9 files in other folders)
