[project]
name = "universal-manga-downloader"
version = "0.1.0"
description = "A universal manga downloader."
dependencies = [
    "requests",
    "beautifulsoup4",
    "Pillow",
    "cloudscraper",
    "sv-ttk",
]

[project.scripts]
umd = "manga_downloader:main"

[tool.setuptools]
py-modules = ["manga_downloader", "config"]
packages = ["core", "parsers", "plugins", "services", "utils"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "W", "C4"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
follow_imports = "silent"
