[project]
name = "universal-manga-downloader"
version = "1.3.9"
description = "A universal manga downloader with enhanced stability and performance."
dependencies = [
    "requests",
    "beautifulsoup4",
    "Pillow",
    "cloudscraper",
    "sv-ttk",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "types-requests>=2.31.0",
]

[project.scripts]
umd = "umd_cli:main"

[tool.setuptools]
py-modules = ["manga_downloader", "config", "umd_cli"]
packages = ["core", "plugins", "services", "ui", "ui.tabs", "utils"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "W", "C4"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
follow_imports = "silent"
exclude = "(?x)(^build/|^dist/|\\.egg-info/)"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used check in tests
